manifests/media-management/tautulli/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media-management
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway
      #sectionName: https
  hostnames:
    - tautulli.newgamer.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: tautulli
          port: 8181
          weight: 1
